data/collection/fixes/descriptions/scala/scala-7330
```
Welcome to Scala version 2.10.1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0-ea).

scala> class Y[T]; 0 match { case Y[_] => }
<console>:9: error: unsupported pattern: Y[_] (a class scala.reflect.internal.Trees$TypeTree).
 This is a scalac bug. Tree diagnostics: Y[_].
        0 match { case Y[_] => }
                        ^
```

"This is a scalac bug": when I say it, most often false; when scalac says it, guaranteed true!

the result in Scala version 2.11.0-20130322-102202-0acf87844e is the same.

2.9 says "class Y of type Y does not take type parameters", which is a correct-ish error to give though it doesn't help the naive user clear up the class vs. companion object confusion that probably made them write this.  (what naive user? who, me? <looks around wildly>)